First items and tab

--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.firstmod.sapphire": "Sapphire"
+  "item.firstmod.sapphire": "Sapphire",
+  "item.firstmod.sapphire": "Raw Sapphire",
+  "creativetab.first_tab": "First Tab"
 }
