--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -1,5 +1,9 @@
 {
   "item.firstmod.sapphire": "Sapphire",
   "item.firstmod.sapphire": "Raw Sapphire",
+
+  "block.firstmod.sapphire_block": "Block of Sapphire",
+  "block.firstmod.raw_sapphire_block": "Block of Raw Sapphire",
+
   "creativetab.first_tab": "First Tab"
 }
