--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -8,6 +8,8 @@
 
   "item.firstmod.pine_cone": "Pine Cone",
 
+  "item.firstmod.sapphire_staff": "Sapphire Staff",
+
   "block.firstmod.sapphire_block": "Block of Sapphire",
   "block.firstmod.raw_sapphire_block": "Block of Raw Sapphire",
   "block.firstmod.sapphire_ore": "Sapphire Ore",
@@ -16,6 +18,16 @@
   "block.firstmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
 
   "block.firstmod.sound_block": "Sound Block",
+
+  "block.firstmod.sapphire_stairs": "Sapphire Stairs",
+  "block.firstmod.sapphire_slab": "Sapphire Slab",
+  "block.firstmod.sapphire_button": "Sapphire Button",
+  "block.firstmod.sapphire_pressure_plate": "Sapphire Pressure Plate",
+  "block.firstmod.sapphire_fence": "Sapphire Fence",
+  "block.firstmod.sapphire_fence_gate": "Sapphire Fence Gate",
+  "block.firstmod.sapphire_wall": "Sapphire Wall",
+  "block.firstmod.sapphire_door": "Sapphire Door",
+  "block.firstmod.sapphire_trapdoor": "Sapphire Trapdoor",
 
   "tooltip.firstmod.metal_detector.tooltip": "Finds valuables underground!",
 
