--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -10,6 +10,17 @@
 
   "item.firstmod.sapphire_staff": "Sapphire Staff",
 
+  "item.firstmod.sapphire_sword": "Sapphire Sword",
+  "item.firstmod.sapphire_pickaxe": "Sapphire Pickaxe",
+  "item.firstmod.sapphire_axe": "Sapphire Axe",
+  "item.firstmod.sapphire_shovel": "Sapphire Shovel",
+  "item.firstmod.sapphire_hoe": "Sapphire Hoe",
+
+  "item.firstmod.sapphire_helmet": "Sapphire Helmet",
+  "item.firstmod.sapphire_chestplate": "Sapphire Chestplate",
+  "item.firstmod.sapphire_leggings": "Sapphire Leggings",
+  "item.firstmod.sapphire_boots": "Sapphire Boots",
+
   "block.firstmod.sapphire_block": "Block of Sapphire",
   "block.firstmod.raw_sapphire_block": "Block of Raw Sapphire",
   "block.firstmod.sapphire_ore": "Sapphire Ore",
