Mobs and Animations

--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -27,6 +27,8 @@
   "item.firstmod.bar_brawl_music_disc": "Bar Brawl Music Disc",
   "item.firstmod.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl (CC0)",
 
+  "item.firstmod.rhino_spawn_egg": "Rhino Spawn Egg",
+
   "block.firstmod.catmint": "Catmint",
 
   "block.firstmod.sapphire_block": "Block of Sapphire",
